[CMD] Fix and simplify implementation of "IF EXIST": - Don't make any difference between wildcard search and normal search - This fixes handling DOS devices search (ie, IF EXIST C:\ReactOS\NUL now works) - This fixes handling pagefile.sys without requiring specifing rights - Also fix handling directory search, terminated with a \

CORE-11784

svn path=/trunk/; revision=74444